fix: set column gao on nav to the --column-gap variable

--- a/app/_components/header/index.module.css
+++ b/app/_components/header/index.module.css
@@ -26,7 +26,7 @@
 
 .nav {
   display: flex;
-  column-gap: var(--size-5);
+  column-gap: var(--column-gap);
   justify-content: space-around;
   overflow: hidden;
 }
